src/test/ui/issues/issue-3993.stderr
error[E0603]: function `fly` is private
  --> $DIR/issue-3993.rs:1:10
   |
LL | use zoo::fly;
   |          ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0603`.
